source/tests/errors/old/cannot_change_type_variable.apex
xyu = 10
xyu = "ten"